--- a/Practical_6B.ipynb
+++ b/Practical_6B.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyML/OVVo1V4R7k4DZn91xsW",
+      "authorship_tag": "ABX9TyP2WCi2tXphbCEaDzMtSkR6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PkWBwB-DUKTw",
-        "outputId": "25c285c0-734e-48ec-c908-d34bdf32e3c6"
+        "outputId": "fcfaa321-81d5-4031-c693-9aa552a9a8f2"
       },
       "outputs": [
         {
@@ -43,7 +43,7 @@
           "text": [
             "4 + 5i\n",
             "6 + 2i\n",
-            "10 + 7i\n"
+            "24 + 10i\n"
           ]
         }
       ],
@@ -54,10 +54,10 @@
         "    self.real=real\n",
         "    self.img=img\n",
         "  def calc(self,other): # other is a variable- not a keyword\n",
-        "    real=self.real+other.real\n",
-        "    img = self.img + other.img\n",
+        "    real=self.real * other.real\n",
+        "    img = self.img * other.img\n",
         "    c3=complex(real,img)\n",
-        "    return\n",
+        "    return c3\n",
         "  def display(self):\n",
         "    print(f\"{self.real} + {self.img}i\") #whenever a function s called- it takes through self\n",
         "\n",
@@ -165,7 +165,7 @@
         "id": "WGUzT08vcLwY",
         "outputId": "3cfc3713-586b-446b-bd50-14f7d7c35ddf"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
