--- a/Practical_6B.ipynb
+++ b/Practical_6B.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2WCi2tXphbCEaDzMtSkR6",
+      "authorship_tag": "ABX9TyP2Z3qTrXLTCaBKDQr0cjeJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -156,28 +156,28 @@
         "\n",
         "khushi = bank(1,100)\n",
         "manthan = bank(2,50)\n",
-        "khushi.transfer(manthan,110)"
+        "khushi.transfer(manthan,70)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WGUzT08vcLwY",
-        "outputId": "3cfc3713-586b-446b-bd50-14f7d7c35ddf"
+        "outputId": "9e9ec81d-c78a-4a4e-d3dd-04c471f891f8"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Transaction Unsuccessful\n",
+            "Successful transaction\n",
             "\n",
             "Acc_Num = 1\n",
-            "Balance = 100\n",
+            "Balance = 30\n",
             "\n",
             "Acc_Num = 2\n",
-            "Balance = 50\n",
+            "Balance = 120\n",
             "\n"
           ]
         }
